# ai-prophet-datasets

./: .gitignore  README.md  registry.json
.github/workflows/: dataset-registry-sync.yml
datasets/dogfood-test/: dataset.json
datasets/dogfood-test/releases/2026-05-02/: release.json  tasks.jsonl
datasets/dummy/: dataset.json  metadata.json
datasets/dummy/2026-03-01/: tasks.jsonl
datasets/dummy/releases/2026-03-01/: release.json
datasets/dummy/releases/2026-03-02/: release.json
datasets/dummy/releases/2026-03-03/: release.json  tasks.jsonl
datasets/hackathon-categories/: dataset.json
datasets/hackathon-categories/releases/economics/: release.json
datasets/hackathon-categories/releases/entertainment/: release.json  tasks.jsonl
datasets/hackathon-categories/releases/sports/: release.json
datasets/hackathon-resolved-mix/: dataset.json
datasets/hackathon-resolved-mix/releases/v1.0.0/: release.json
datasets/prophet-recent/: dataset.json  metadata.json
datasets/prophet-recent/releases/v1.0.0/: release.json  tasks.jsonl
datasets/prophet-recent/v1.0.0/: tasks.jsonl
datasets/sample-economics/: dataset.json
datasets/sample-entertainment/: dataset.json
datasets/sample-resolved/: dataset.json
datasets/sample-sports/: dataset.json
scripts/: registry_manager.py
sdk/: README.md  docs.md  pyproject.toml
sdk/src/ai_prophet_datasets/: __init__.py  cli.py  models.py  registry.py  validation.py
sdk/tests/: conftest.py  test_cli.py  test_local.py  test_models.py  test_remote.py  test_validation.py
(+8 files in other folders)
