[project]
name = "ai-prophet-datasets"
version = "0.1.0"
description = "Python SDK for the ai-prophet forecasting datasets registry."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ai-prophet" }]
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
]

[project.scripts]
ai-prophet-datasets = "ai_prophet_datasets.cli:main"

[project.urls]
Repository = "https://github.com/ai-prophet/ai-prophet-datasets"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
